# open_image_annotator

./: .metadata  LICENSE  index.html  pubspec.yaml  requirements.txt  setup.cfg  setup.py
android/app/: build.gradle.kts
docs/: README.md  todo.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/application/editor/: editor_state.dart  history_notifier.dart  project_notifier.dart
lib/application/extensions/: file_extensions.dart  parallel_for.dart
lib/application/settings/: settings_state.dart
lib/domain/: dataset_converter.dart
lib/domain/dataset/: annotation.dart  bbox.dart  body_part.dart  bubble_view_constraints.dart  click_points.dart  dataset.dart  key_points.dart  label.dart  metadata.dart
lib/infrastructure/: coco_dataset_converter.dart  json_dataset_converter.dart
lib/presentation/: app.dart  routing.dart  theme.dart
lib/presentation/common/: responsive_layout.dart  settings_button.dart  tap_shield.dart
lib/presentation/editor/: bubble_view.dart  editor_appbar.dart  editor_body.dart  editor_page.dart  hierarchy.dart  inspector.dart  object_detection.dart  range_selection.dart  toolbar.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
open_image_annotator_dataset/: types.py
open_image_annotator_dataset/dataset/: __init__.py  _classifier_dataset.py  _dataset_base.py  _detection_dataset.py  _saliency_dataset.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
