[metadata]
name = open_image_annotator_dataset
version = 1.0.0
description = A short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
author = Sumx21t
author_email = otoro180yen@gmail.com
url = https://github.com/NebusokuDev/open_image_annotator_dataset.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    torch
    torchinfo
    torchvision
    matplotlib
    pillow
    numpy
    setuptools
python_requires = >=3.6
